alt attributes added to images/ html set to english, citation updated

--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="index.html" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png"></a>
+        <a href="index.html" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png" alt="Glow in The Dough logo"></a>
         <a href="order.html">ORDER</a>
         <a href="about-us.html">ABOUT US</a>
         <a href="contact.html">CONTACT</a>
@@ -30,22 +30,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/pizzas/build.html"><img class="menu-img" src="assets/stock-pizza.jpg"></a>
+                <a href="order/pizzas/build.html"><img class="menu-img" src="assets/stock-pizza.jpg" alt="Image of a custom pizza order"></a>
                 <h3>Build your own Pizza</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/house.html"><img class="menu-img" img src="assets/hou-pizza.jpg"></a>
+                <a href="order/pizzas/house.html"><img class="menu-img" img src="assets/hou-pizza.jpg" alt="Image of Glow in The Dough house special pizza"></a>
                 <h3>House Special</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/pepperoni.html"><img class="menu-img" img src="assets/pep-pizza.jpg"></a>
+                <a href="order/pizzas/pepperoni.html"><img class="menu-img" img src="assets/pep-pizza.jpg" alt="Image of Glow in The Dough pepperoni pizza"></a>
                 <h3>Pepperoni</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/veggie.html"><img class="menu-img" img src="assets/veg-pizza.jpg"></a>
+                <a href="order/pizzas/veggie.html"><img class="menu-img" img src="assets/veg-pizza.jpg" alt="Image of Glow in The Dough vegetarian pizza"></a>
                 <h3>Vegetarian</h3>
             </div>
             
@@ -55,12 +55,12 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/pastas/chicken-alfredo.html"><img class="menu-img" img src="assets/ca-pasta.jpg"></a>
+                <a href="order/pastas/chicken-alfredo.html"><img class="menu-img" img src="assets/ca-pasta.jpg" alt="Image of Glow in The Dough chicken alfred pasta"></a>
                 <h3>Chicken Alfredo</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pastas/meatball-marinara.html"><img class="menu-img" img src="assets/mm-pasta.jpg"></a>
+                <a href="order/pastas/meatball-marinara.html"><img class="menu-img" img src="assets/mm-pasta.jpg" alt="Image of Glow in The Dough meatball marinara paste"></a>
                 <h3>Meatball Marinara</h3>
             </div>
 
@@ -79,22 +79,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/wings/boneless-wings.html"><img class="menu-img" img src="assets/boneless-wings.jpg"></a>
+                <a href="order/wings/boneless-wings.html"><img class="menu-img" img src="assets/boneless-wings.jpg" alt="Image of Glow in The Dough boneless wings"></a>
                 <h3>Boneless Wings</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/wings/wings.html"><img class="menu-img" img src="assets/wings.jpg"></a>
+                <a href="order/wings/wings.html"><img class="menu-img" img src="assets/wings.jpg" alt="Image of Glow in The Dough bone-in wings"></a>
                 <h3>Wings</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/breadsticks.html"><img class="menu-img" img src="assets/breadsticks.jpg"></a>
+                <a href="order/breadsticks.html"><img class="menu-img" img src="assets/breadsticks.jpg" alt="Image of Glow in The Dough breadsticks"></a>
                 <h3>Bread Sticks</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/drinks-desserts.html"><img class="menu-img" img src="assets/coke.png"></a>
+                <a href="order/drinks-desserts.html"><img class="menu-img" img src="assets/coke.png" alt="Image of a Coca-Cola"></a>
                 <h3>Drinks & Desserts</h3>
             </div>
 
