--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="../index.html" style="max-width: 15%;"><img src="../assets/glow-in-the-dough-textless.png"></a>
+        <a href="../index.html" style="max-width: 15%;"><img src="../assets/glow-in-the-dough-textless.png" alt="Glow in The Dough logo"></a>
         <a href="../order.html">ORDER</a>
         <a href="../about-us.html">ABOUT US</a>
         <a href="../contact.html">CONTACT</a>
@@ -30,7 +30,7 @@
 
             <!-- Item -->
             <div>
-                <img src="../assets/coke.png">
+                <img src="../assets/coke.png" alt="Coca-Cola">
                 <h3>$4 - Coke</h3>
                 <select name="amount" id="Coke">
                     <option value="1">1</option>
@@ -43,7 +43,7 @@
                 
             <!-- Item -->
             <div>
-                <img src="../assets/sprite.png">
+                <img src="../assets/sprite.png" alt="Sprite">
                 <h3>$4 - Sprite</h3>
                 <select name="amount" id="Sprite">
                     <option value="1">1</option>
@@ -56,7 +56,7 @@
 
             <!-- Item -->
             <div>
-                <img src="../assets/gingerale.png">
+                <img src="../assets/gingerale.png" alt="Ginger Ale">
                 <h3>$4 - Ginger Ale</h3>
                 <select name="amount" id="GingerAle">
                     <option value="1">1</option>
@@ -69,7 +69,7 @@
 
             <!-- Item -->
             <div>
-                <img src="../assets/rootbeer.png">
+                <img src="../assets/rootbeer.png" alt="Root Beer">
                 <h3>$4 - Root Beer</h3>
                 <select name="amount" id="RootBeer">
                     <option value="1">1</option>
@@ -82,7 +82,7 @@
 
             <!-- Item -->
             <div>
-                <img src="../assets/cheesecake.jpg">
+                <img src="../assets/cheesecake.jpg" alt="Cheesecake">
                 <h3>$6 - Cheese Cake (1 Slice)</h3>
                 <select name="amount" id="CheeseCake">
                     <option value="1">1</option>
@@ -95,7 +95,7 @@
 
             <!-- Item -->
             <div>
-                <img src="../assets/brownie.jpg">
+                <img src="../assets/brownie.jpg" alt="Cookie">
                 <h3>$6 - Chocolate Brownie (3 pcs.)</h3>
                 <select name="amount" id="ChocoBrown">
                     <option value="1">1</option>
@@ -108,7 +108,7 @@
 
             <!-- Item -->
             <div>
-                <img src="../assets/cookie.jpg">
+                <img src="../assets/cookie.jpg" alt="Cookie">
                 <h3>$6 - Chocolate Chip Cookies (8pc.)</h3>
                 <select name="amount" id="ChipCookie">
                     <option value="1">1</option>
