--- a/P02 Team 03/order/pizzas/veggie.html
+++ b/P02 Team 03/order/pizzas/veggie.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
@@ -14,7 +14,7 @@
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="../../index.html" style="max-width: 15%;"><img src="../../assets/glow-in-the-dough-textless.png"></a>
+        <a href="../../index.html" style="max-width: 15%;"><img src="../../assets/glow-in-the-dough-textless.png" alt="Glow in The Dough logo"></a>
         <a href="../../order.html">ORDER</a>
         <a href="../../about-us.html">ABOUT US</a>
         <a href="../../contact.html">CONTACT</a>
@@ -31,7 +31,7 @@
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/veg-pizza.jpg" style="max-width: 100%;">
+                    <img src="../../assets/veg-pizza.jpg" alt="vegetarian pizza" style="max-width: 100%;">
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
