--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="index.html" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png"></a>
+        <a href="index.html" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png" alt="Glow in The Dough logo"></a>
         <a href="order.html">ORDER</a>
         <a href="about-us.html">ABOUT US</a>
         <a href="contact.html">CONTACT</a>
@@ -29,7 +29,7 @@
 
                 <div class="flex-container">
                     <div class="flex-item">
-                        <img src="assets/hou-pizza.jpg" style="max-width: 100%;">
+                        <img src="assets/hou-pizza.jpg" alt="example image of pizza in checkout" style="max-width: 100%;">
                     </div>
                     <div class="flex-item">
                         <h3>Product Amount</h3>
@@ -54,7 +54,7 @@
 
                 <div class="flex-container">
                     <div class="flex-item">
-                        <img src="assets/pep-pizza.jpg" style="max-width: 100%;">
+                        <img src="assets/pep-pizza.jpg" alt="example image of pizza in checkout" style="max-width: 100%;">
                     </div>
                     <div class="flex-item">
                         <h3>Product Amount</h3>
