--- a/P02 Team 03/menu_deprecated.html
+++ b/P02 Team 03/menu_deprecated.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en"> 
 <head>
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
@@ -13,7 +13,7 @@
 <body>
     <!-- Navigation -->
     <nav class="main-nav">
-        <a href="index.html" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png"></a>
+        <a href="index.html" style="max-width: 15%;"><img src="assets/glow-in-the-dough-textless.png" alt="Glow in The Dough logo"></a>
         <a href="order.html">ORDER</a>
         <a href="menu.html">MENU</a>
         <a href="about-us.html">ABOUT US</a>
