--- a/P02 Team 03/order/wings/boneless-wings.html
+++ b/P02 Team 03/order/wings/boneless-wings.html
@@ -33,7 +33,7 @@
             <h2>Boneless Wings</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/boneless-wings.jpg" alt="boneless chicken wings" style="max-width: 100%;">
+                    <div class="center-2"><img src="../../assets/boneless-wings.jpg" alt="boneless chicken wings" style="max-width: 100%;"></div>
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
