--- a/P02 Team 03/order/breadsticks.html
+++ b/P02 Team 03/order/breadsticks.html
@@ -32,7 +32,7 @@
             <h2>Bread Sticks</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/breadsticks.jpg" alt="breadsticks" style="max-width: 100%;">
+                    <div class="center-2"><img src="../../assets/breadsticks.jpg" alt="breadsticks" style="max-width: 100%;"></div>
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
