--- a/P02 Team 03/order/pastas/chicken-alfredo.html
+++ b/P02 Team 03/order/pastas/chicken-alfredo.html
@@ -33,8 +33,7 @@
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/ca-pasta.jpg" alt="Chicken alfredo pasta" style="max-width: 100%;">
-                    
+                    <div class="center-2"><img src="../../assets/ca-pasta.jpg" alt="Chicken alfredo pasta" style="max-width: 100%;"></div>
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
