--- a/P02 Team 03/order/pastas/meatball-marinara.html
+++ b/P02 Team 03/order/pastas/meatball-marinara.html
@@ -32,7 +32,7 @@
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/mm-pasta.jpg" alt="Meatball marinara pasta" style="max-width: 100%;">
+                    <div class="center-2"><img src="../../assets/mm-pasta.jpg" alt="Meatball marinara pasta" style="max-width: 100%;"></div>
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
