--- a/P02 Team 03/order/pizzas/veggie.html
+++ b/P02 Team 03/order/pizzas/veggie.html
@@ -31,7 +31,7 @@
 
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/veg-pizza.jpg" alt="vegetarian pizza" style="max-width: 100%;">
+                    <div class="center-2"><img src="../../assets/veg-pizza.jpg" alt="vegetarian pizza" style="max-width: 100%;"></div>
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
