--- a/P02 Team 03/order/wings/wings.html
+++ b/P02 Team 03/order/wings/wings.html
@@ -30,7 +30,7 @@
             <h2>Wings</h2>
             <div class="flex-container">
                 <div class="flex-item">
-                    <img src="../../assets/wings.jpg" alt="bone-in chicken wings" style="max-width: 100%;">
+                    <div class="center-2"><img src="../../assets/wings.jpg" alt="bone-in chicken wings" style="max-width: 100%;"></div>
                 </div>
                 <div class="flex-item">
                     <h3>Description</h3>
