small aesthetic changes

--- a/P02 Team 03/about-us.html
+++ b/P02 Team 03/about-us.html
@@ -52,10 +52,8 @@
                     <p>VVV 123</p> 
                 </div>
             </div>
-            
+            <div class="bottom-border-pink"></div>
         </div>
-
-        <div class="center">
             
         </div>
 
