Reworked footer to include style guide/citations/github

--- a/P02 Team 03/order/pastas/meatball-marinara.html
+++ b/P02 Team 03/order/pastas/meatball-marinara.html
@@ -121,5 +121,11 @@
             <p>Surrey, B.C.</p>
             <p>VVV 123</p>
         </div>
+        <div class="footer-flex-item">
+            <h3>Resources</h3>
+            <a href="style-guide.html">Style Guide</a>
+            <a href="style-guide.html#citations">References </a>
+            <a href="https://github.com/sleepsim/P02-Company">Github Repo</a>
+        </div>
     </footer>
 </body>
