--- a/P02 Team 03/about-us.html
+++ b/P02 Team 03/about-us.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flexbox.css"/>
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -28,14 +28,14 @@
             <div class="flex-container">
                 
                 <div class="flex-item">
-                    <img class="img-big"src="assets/glow-in-the-dough.png">
+                    <img class="img-big" src="assets/glow-in-the-dough.png" alt="Company logo of Glow in the Dough">
                 </div>
 
                 <div class="flex-item">
                     <h2>Our Story</h2>
                     <p>The story of Glow In The Dough begins on the brick laid streets of Vancouver’s famous Gastown. It is here that Glow In The Dough opened its doors, offering hot pies and refreshing drinks. The origin of our name comes from our love for fun, vibrant neon signs, and dedication to fresh ingredients and delicious pies. We believe that communities come together when sharing a meal. That is why we’ve created an environment for the community to grow every day. </p>
                     <a href="style-guide.html">Style Guide Link</a><br><br>
-                    <a href="order.html"><input type="submit" class="button-yellow button-large" value="ORDER NOW" onclick="cartAlert()"></a>
+                    <a href="order.html" class="button-yellow button-large">ORDER NOW</a>
                 </div>
             </div>
 
@@ -52,9 +52,9 @@
                     <p>VVV 123</p> 
                 </div>
             </div>
+
             <div class="bottom-border-pink"></div>
-        </div>
-            
+
         </div>
 
     </div>
