--- a/P02 Team 03/order/pastas/chicken-alfredo.html
+++ b/P02 Team 03/order/pastas/chicken-alfredo.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/normalize.css"/>
-    <link rel="stylesheet" href="../../css/flexbox.css"/>
-    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="../../css/flexbox.css">
+    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../../js/scripts.js"></script>
 
@@ -50,9 +50,9 @@
 
                     <h3>Pasta Type</h3>
                     <input type="radio" id="pastaop1" name="sauceop">
-                    <label for="sauceop1">Penne</label><br>
+                    <label for="pastaop1">Penne</label><br>
                     <input type="radio" id="pastaop2" name="sauceop">
-                    <label for="cheese">Fettucini</label><br>
+                    <label for="pastaop2">Fettucini</label><br>
 
                     <div class="bottom-border-pink"></div>
 
