Pizzas - HTML Validated

--- a/P02 Team 03/order/pizzas/veggie.html
+++ b/P02 Team 03/order/pizzas/veggie.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/normalize.css"/>
-    <link rel="stylesheet" href="../../css/flexbox.css"/>
-    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="../../css/flexbox.css">
+    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../../js/scripts.js"></script>
 </head>
@@ -56,15 +56,15 @@
                     <div class="bottom-border-pink"></div>
 
                     <h3>Extra Toppings</h3>
-                    <input type="checkbox" name="Pepperoni"> 
+                    <input type="checkbox" id="Pepperoni"> 
                     <label for="Pepperoni">Pepperoni</label><br>
-                    <input type="checkbox" name="Cheese"> 
+                    <input type="checkbox" id="Cheese"> 
                     <label for="Cheese">Cheese</label><br>
-                    <input type="checkbox" name="Sausage"> 
+                    <input type="checkbox" id="Sausage"> 
                     <label for="Sausage">Sausage</label><br>
-                    <input type="checkbox" name="Chicken"> 
+                    <input type="checkbox" id="Chicken"> 
                     <label for="Chicken">Chicken</label><br>
-                    <input type="checkbox" name="Ham"> 
+                    <input type="checkbox" id="Ham"> 
                     <label for="Ham">Ham</label>
 
                     <div class="bottom-border-pink"></div>
