--- a/P02 Team 03/order/pizzas/build.html
+++ b/P02 Team 03/order/pizzas/build.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/normalize.css"/>
-    <link rel="stylesheet" href="../../css/flexbox.css"/>
-    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="../../css/flexbox.css">
+    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../../js/scripts.js"></script>
 </head>
@@ -51,11 +51,11 @@
                     <input type="radio" id="sauceop1" name="sauceop">
                     <label for="sauceop1">Default (Pizza Sauce)</label><br>
                     <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Alfredo Sauce</label><br>
+                    <label for="sauceop2">Alfredo Sauce</label><br>
                     <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Garlic Parm</label><br>
+                    <label for="sauceop3">Garlic Parm</label><br>
                     <input type="radio" id="sauceop4" name="sauceop">
-                    <label for="cheese">No Sauce*</label><br>
+                    <label for="sauceop4">No Sauce*</label><br>
 
                     <div class="bottom-border-pink"></div>
 
@@ -68,15 +68,15 @@
                     <div class="bottom-border-pink"></div>
 
                     <h3>Extra Toppings</h3>
-                    <input type="checkbox" name="Pepperoni"> 
+                    <input type="checkbox" id="Pepperoni"> 
                     <label for="Pepperoni">Pepperoni</label><br>
-                    <input type="checkbox" name="Cheese"> 
+                    <input type="checkbox" id="Cheese"> 
                     <label for="Cheese">Cheese</label><br>
-                    <input type="checkbox" name="Sausage"> 
+                    <input type="checkbox" id="Sausage"> 
                     <label for="Sausage">Sausage</label><br>
-                    <input type="checkbox" name="Chicken"> 
+                    <input type="checkbox" id="Chicken"> 
                     <label for="Chicken">Chicken</label><br>
-                    <input type="checkbox" name="Ham"> 
+                    <input type="checkbox" id="Ham"> 
                     <label for="Ham">Ham</label>
 
                     <div class="bottom-border-pink"></div>
