Wings - HTML Validated

--- a/P02 Team 03/order/wings/wings.html
+++ b/P02 Team 03/order/wings/wings.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../../css/main.css">
-    <link rel="stylesheet" href="../../css/normalize.css"/>
-    <link rel="stylesheet" href="../../css/flexbox.css"/>
-    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../../css/normalize.css">
+    <link rel="stylesheet" href="../../css/flexbox.css">
+    <link rel="stylesheet" href="../../css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../../js/scripts.js"></script>
 </head>
@@ -50,23 +50,23 @@
                     <input type="radio" id="sauceop1" name="sauceop">
                     <label for="sauceop1">Honey Garlic</label><br>
                     <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Garlic Parm</label><br>
+                    <label for="sauceop2">Garlic Parm</label><br>
                     <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Buffalo Hot</label><br>
+                    <label for="sauceop3">Buffalo Hot</label><br>
                     <input type="radio" id="sauceop4" name="sauceop">
-                    <label for="cheese">Salt & Pepper</label><br>
+                    <label for="sauceop4">Salt & Pepper</label><br>
 
                     <div class="bottom-border-pink"></div>
 
                     <h3>Dips</h3>
                     <input type="radio" id="dipop1" name="sauceop">
-                    <label for="sauceop1">Ranch</label><br>
+                    <label for="dipop1">Ranch</label><br>
                     <input type="radio" id="dipop2" name="sauceop">
-                    <label for="cheese">Garlic</label><br>
-                    <input type="radio" id="dipop2" name="sauceop">
-                    <label for="cheese">BBQ</label><br>
-                    <input type="radio" id="dipop2" name="sauceop">
-                    <label for="cheese">Hot Sauce</label><br>
+                    <label for="dipop2">Garlic</label><br>
+                    <input type="radio" id="dipop3" name="sauceop">
+                    <label for="dipop3">BBQ</label><br>
+                    <input type="radio" id="dipop4" name="sauceop">
+                    <label for="dipop4">Hot Sauce</label><br>
                     
                     <br><br>
 
