--- a/P02 Team 03/order/breadsticks.html
+++ b/P02 Team 03/order/breadsticks.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../css/flexbox.css"/>
-    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/flexbox.css">
+    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../js/scripts.js"></script>
 </head>
@@ -52,9 +52,9 @@
                     <input type="radio" id="sauceop1" name="sauceop">
                     <label for="sauceop1">Ranch</label><br>
                     <input type="radio" id="sauceop2" name="sauceop">
-                    <label for="cheese">Garlic</label><br>
+                    <label for="sauceop2">Garlic</label><br>
                     <input type="radio" id="sauceop3" name="sauceop">
-                    <label for="cheese">Cheese</label><br>
+                    <label for="sauceop3">Cheese</label><br>
                     
                     <br><br>
 
