--- a/P02 Team 03/order/drinks-desserts.html
+++ b/P02 Team 03/order/drinks-desserts.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/main.css">
-    <link rel="stylesheet" href="../css/normalize.css"/>
-    <link rel="stylesheet" href="../css/flexbox.css"/>
-    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/flexbox.css">
+    <link rel="stylesheet" href="../css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="../js/scripts.js"></script>
 </head>
