Rest of the pages - HTML Validated

--- a/P02 Team 03/checkout.html
+++ b/P02 Team 03/checkout.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flexbox.css"/>
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -36,17 +36,17 @@
                         <option value="4">None</option>
                 </select>
                 <br><br>
-                <label for="deliveryop">Custom Amount</label>
+                <label for="tip_num">Custom Amount</label>
                 <br>
-                <input type="text" id="card_name" name="cardnname" class="input-text"><br>
+                <input type="text" id="tip_num" name="tip_num" class="input-text"><br>
                 <div class="bottom-border"></div>
                 <br>
                 <input type="radio" id="delivery" name="deliveryop" value="deliveryoption">
                 <label for="deliveryop">Delivery</label>
-                <input type="radio" id="pickup" name="deliveryop" value="deliveryoption">
+                <input type="radio" id="deliveryop" name="deliveryop" value="deliveryoption">
                 <label for="deliveryop">Pick-up</label><br><br>
                 <label for="card_name">Name On Card</label><br>
-                <input type="text" id="card_name" name="cardnname" class="input-text"><br>
+                <input type="text" id="card_name" name="cardname" class="input-text"><br>
                 <label for="address">Address Line</label><br>
                 <input type="text" id="address" name="adddress" class="input-text"><br>
                 <label for="phone_number">Phone Number</label><br>
@@ -62,8 +62,6 @@
                 <input type="submit" class="button-yellow" value="Order">
                 <div class="bottom-border"></div>
             </div>
-        </div>
-
 
 
     </div>
