--- a/P02 Team 03/contact.html
+++ b/P02 Team 03/contact.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flexbox.css"/>
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -34,15 +34,15 @@
             </div>
             <div class="flex-item">
                 <label for="first_name">First Name</label><br>
-                <input type="text" id="contact_name" name="firstname" class="input-text"><br><br>
+                <input type="text" id="first_name" name="firstname" class="input-text"><br><br>
                 <label for="last_name">Last Name</label><br>
-                <input type="text" id="contact_surname" name="lastname" class="input-text"><br><br>
-                <label for="email">Email</label><br>
+                <input type="text" id="last_name" name="lastname" class="input-text"><br><br>
+                <label for="contact_email">Email</label><br>
                 <input type="text" id="contact_email" name="email" class="input-text"><br><br>
-                <label for="subject">Subject</label><br>
+                <label for="contact_subject">Subject</label><br>
                 <input type="text" id="contact_subject" name="contactsub" class="input-text"><br> <br>
                 <label for="card_number">Message</label><br>
-                <input type="text" id="contact_msg" name="msg" class="input-text"><br><br>
+                <input type="text" id="card_number" name="msg" class="input-text"><br><br>
                 <input type="checkbox" id="bill-ship">
                 <label for="bill-ship"> Submit anonymously </label><br><br>
                 <input type="submit" class="button-yellow" value="Submit">
