--- a/P02 Team 03/cart.html
+++ b/P02 Team 03/cart.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flexbox.css"/>
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -73,11 +73,11 @@
                     </div>
                 </div>
                 <div class="bottom-border"></div>
-            </div class="top-border">
+            <div class="top-border"></div>
                 <h3>Total: $41.98</h3>
-                <a href=checkout.html><input type="submit" class="button-yellow" value="Checkout"></a>
+                <a href=checkout.html class="button-yellow button-large">CHECKOUT</a>
         </div>
-
+    </div>
     <!-- Footer Start ////////////////////////////////////////  -->
 
     <!-- Footer -->
