--- a/P02 Team 03/index.html
+++ b/P02 Team 03/index.html
@@ -7,10 +7,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flexbox.css"/>
-    <link rel="stylesheet" href="css/bootstrapfix.css"/>
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/bootstrapfix.css">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -68,7 +68,7 @@
           </div>
 
           <div class="flex-centered">
-              <a href="order.html"><input type="submit" class="button-yellow button-large" value="ORDER NOW" onclick="cartAlert()">   </a> 
+              <a href="order.html" class="button-yellow button-large">ORDER NOW</a> 
           </div>
 
     </div>
