--- a/P02 Team 03/order.html
+++ b/P02 Team 03/order.html
@@ -4,9 +4,9 @@
     <title>P02 Style Guide</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/flexbox.css"/>
-    <link rel="stylesheet" href="css/stylesheet.css" type="text/css" charset="utf-8" />
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/flexbox.css">
+    <link rel="stylesheet" href="css/stylesheet.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
 
@@ -35,17 +35,17 @@
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/house.html"><img class="menu-img" img src="assets/hou-pizza.jpg" alt="Image of Glow in The Dough house special pizza"></a>
+                <a href="order/pizzas/house.html"><img class="menu-img" src="assets/hou-pizza.jpg" alt="Image of Glow in The Dough house special pizza"></a>
                 <h3>House Special</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/pepperoni.html"><img class="menu-img" img src="assets/pep-pizza.jpg" alt="Image of Glow in The Dough pepperoni pizza"></a>
+                <a href="order/pizzas/pepperoni.html"><img class="menu-img" src="assets/pep-pizza.jpg" alt="Image of Glow in The Dough pepperoni pizza"></a>
                 <h3>Pepperoni</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pizzas/veggie.html"><img class="menu-img" img src="assets/veg-pizza.jpg" alt="Image of Glow in The Dough vegetarian pizza"></a>
+                <a href="order/pizzas/veggie.html"><img class="menu-img" src="assets/veg-pizza.jpg" alt="Image of Glow in The Dough vegetarian pizza"></a>
                 <h3>Vegetarian</h3>
             </div>
             
@@ -55,12 +55,12 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/pastas/chicken-alfredo.html"><img class="menu-img" img src="assets/ca-pasta.jpg" alt="Image of Glow in The Dough chicken alfred pasta"></a>
+                <a href="order/pastas/chicken-alfredo.html"><img class="menu-img" src="assets/ca-pasta.jpg" alt="Image of Glow in The Dough chicken alfred pasta"></a>
                 <h3>Chicken Alfredo</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/pastas/meatball-marinara.html"><img class="menu-img" img src="assets/mm-pasta.jpg" alt="Image of Glow in The Dough meatball marinara paste"></a>
+                <a href="order/pastas/meatball-marinara.html"><img class="menu-img" src="assets/mm-pasta.jpg" alt="Image of Glow in The Dough meatball marinara paste"></a>
                 <h3>Meatball Marinara</h3>
             </div>
 
@@ -79,22 +79,22 @@
         <div class="menu-container top-border">
 
             <div class="flex-item">
-                <a href="order/wings/boneless-wings.html"><img class="menu-img" img src="assets/boneless-wings.jpg" alt="Image of Glow in The Dough boneless wings"></a>
+                <a href="order/wings/boneless-wings.html"><img class="menu-img" src="assets/boneless-wings.jpg" alt="Image of Glow in The Dough boneless wings"></a>
                 <h3>Boneless Wings</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/wings/wings.html"><img class="menu-img" img src="assets/wings.jpg" alt="Image of Glow in The Dough bone-in wings"></a>
+                <a href="order/wings/wings.html"><img class="menu-img" src="assets/wings.jpg" alt="Image of Glow in The Dough bone-in wings"></a>
                 <h3>Wings</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/breadsticks.html"><img class="menu-img" img src="assets/breadsticks.jpg" alt="Image of Glow in The Dough breadsticks"></a>
+                <a href="order/breadsticks.html"><img class="menu-img" src="assets/breadsticks.jpg" alt="Image of Glow in The Dough breadsticks"></a>
                 <h3>Bread Sticks</h3>
             </div>
 
             <div class="flex-item">
-                <a href="order/drinks-desserts.html"><img class="menu-img" img src="assets/coke.png" alt="Image of a Coca-Cola"></a>
+                <a href="order/drinks-desserts.html"><img class="menu-img" src="assets/coke.png" alt="Image of a Coca-Cola"></a>
                 <h3>Drinks & Desserts</h3>
             </div>
 
